--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1">
+    <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="styles/main.css">
     <title>Jason Kriss</title>
   </head>
