--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       <h1>Jason Kriss</h1>
       <p>Born in Minnesota. School at UMN and NYU. Worked on Wall Street. Live in Santa Monica. Work on <a href="http://monospacehq.com">Monospace</a>. Program in Ember.js, Ruby, and Clojure. <a href="http://blog.jasonkriss.com">Blog</a> about it.<br><br>Need some help? <a href="mailto:jasonkriss@gmail.com">Hire me.</a></p>
       <div id="icons">
-        <a href="https://twitter.com/jasonkriss" class="icon-social-twitter" title="Twitter"></a>
-        <a href="https://github.com/jasonkriss" class="icon-social-github" title="GitHub"></a>
-        <a href="https://news.ycombinator.com/user?id=JasonKriss" class="icon-social-hackernews" title="Hacker News"></a>
-        <a href="https://www.facebook.com/jason.kriss.7" class="icon-social-facebook" title="Facebook"></a>
-        <a href="https://linkedin.com/in/jasonkriss" class="icon-social-linkedin" title="LinkedIn"></a>
+        <a href="https://twitter.com/jasonkriss" class="icon ion-social-twitter" title="Twitter"></a>
+        <a href="https://github.com/jasonkriss" class="icon ion-social-github" title="GitHub"></a>
+        <a href="https://news.ycombinator.com/user?id=JasonKriss" class="icon ion-social-hackernews" title="Hacker News"></a>
+        <a href="https://www.facebook.com/jason.kriss.7" class="icon ion-social-facebook" title="Facebook"></a>
+        <a href="https://instagram.com/jasonkriss" class="icon ion-social-instagram" title="Instagram"></a>
+        <a href="https://linkedin.com/in/jasonkriss" class="icon ion-social-linkedin" title="LinkedIn"></a>
       </div>
     </div>
     <script type="text/javascript">
