--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="content">
       <h1>Jason Kriss</h1>
-      <p>Born in Minnesota. School at UMN and NYU. Worked on Wall Street. Live in Santa Monica. Work on <a href="http://monospacehq.com">Monospace</a>. Program in Ember.js, Ruby, and Clojure. <a href="http://blog.jasonkriss.com">Blog</a> about it.<br><br>Need some help? <a href="mailto:jasonkriss@gmail.com">Hire me.</a></p>
+      <p>Born in Minnesota. School at UMN and NYU. Worked on Wall Street. Live in Santa Monica. Work on <a href="http://pagefronthq.com">Pagefront</a>. Program in Ember.js, Ruby, and Clojure. <a href="http://blog.jasonkriss.com">Blog</a> about it.<br><br>Need some help? <a href="mailto:jasonkriss@gmail.com">Hire me.</a></p>
       <div id="icons">
         <a href="https://twitter.com/jasonkriss" class="icon ion-social-twitter" title="Twitter"></a>
         <a href="https://github.com/jasonkriss" class="icon ion-social-github" title="GitHub"></a>
