--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       }
 
       .name {
-        font-size: 2.5em;
+        font-size: 2.5rem;
       }
 
       .title {
-        font-size: 1.15em;
+        font-size: 1.15rem;
       }
 
       .item {
@@ -28,12 +28,12 @@
       }
 
       .bio {
-        line-height: 1.5em;
-        font-size: .85em;
+        line-height: 1.25rem;
+        font-size: .85rem;
       }
 
       .cta {
-        font-size: 1.5em;
+        font-size: 1.5rem;
       }
 
       a {
@@ -49,15 +49,15 @@
       .links,
       .clients {
         position: absolute;
-        bottom: 1em;
+        bottom: 1rem;
       }
 
       .links {
-        left: 1em;
+        left: 1rem;
       }
 
       .clients {
-        right: 1em;
+        right: 1rem;
       }
 
       .clients img {
@@ -83,21 +83,17 @@
 
       .links li:not(:last-child):after {
         content: '|';
-        margin-left: .5em;
+        margin-left: .5rem;
       }
 
-      @media (max-width: 768px) {
-        body {
-          font-size: 28px;
-        }
-        
+      @media (max-width: 480px) {
         .links {
           left: initial;
         }
         
         .clients {
           right: initial;
-          bottom: 3em;          
+          bottom: 3rem;          
         }
       }
     </style>
