--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
   <body>
     <div class="container">
       <div class="name item">Jason Kriss</div>
-      <div class="title item">Deep Learning & Machine Learning Consultant</div>
-      <div class="bio item">Undergrad at Minnesota (under Patrick Bajari). Grad school at The Courant Institute (NYU). Worked on Wall Street. Founded some startups. Love math. Love data. Love code.</div>
+      <div class="title item">Independent Data Science Consultant</div>
+      <div class="bio item">I develop end-to-end deep learning and machine learning projects for startups. From data collection, to modeling, to deployment and integration with existing services, I specialize in building solutions that help teams maximize the usefulness of their data.</div>
       <div class="logo item">
         <img src="logo.svg" alt=""/>
       </div>
