--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="container">
       <div class="name item">Jason Kriss</div>
       <div class="title item">Independent Data Science Consultant</div>
-      <div class="bio item">I develop end-to-end deep learning and machine learning projects for startups. From data collection, to modeling, to deployment and integration with existing services, I specialize in building solutions that help teams maximize the usefulness of their data.</div>
+      <div class="bio item">I develop end-to-end deep learning and machine learning projects for startups. From data collection, to modeling, to deployment and integration, I specialize in building solutions that help teams maximize the usefulness of their data.</div>
       <div class="logo item">
         <img src="logo.svg" alt=""/>
       </div>
