--- a/index.html
+++ b/index.html
@@ -103,12 +103,13 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    <meta charset="UTF-8">
   </head>
   <body>
     <div class="container">
       <div class="name item">Jason Kriss</div>
       <div class="title item">Independent Data Science Consultant</div>
-      <div class="bio item">I develop end-to-end deep learning and machine learning projects for startups. From data collection, to modeling, to deployment and integration, I specialize in building solutions that help teams maximize the usefulness of their data.</div>
+      <div class="bio item">I help companies use data to answer tough questions and build unique products—from ideation all the way to delivery.</div>
       <div class="logo item">
         <img src="logo.svg" alt=""/>
       </div>
